2022-12-17  Dirk Eddelbuettel  <edd@debian.org>

 	* man/DEoptim.Rd: Use https, remove dead link to code.html
	* man/DEoptim.control.Rd: Use https
	* man/DEoptim-methods.Rd: Idem

	* .editorconfig: Added

2022-12-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2022-12-08 Max Coulter <max.coulter@xelect.co.uk>

	* src/devol.cpp: Additions to crossover weights from DEoptim

2022-12-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2022-11-30 Max Coulter <max.coulter@xelect.co.uk>

	* src/devol.cpp: Fix to switch statement strategy 6

2022-11-14  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2021-05-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugReports): Added links

2021-01-05  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

2020-07-31  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Update to 'bionic' and R 4.0.*

2019-09-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/evaluate.h: Use Rcpp::Shield<SEXP> for Rf_lang3() and Rf_eval()

2018-06-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.6

2018-06-07  Kevin Ushey  <kevinushey@gmail.com>

	* src/deoptim.cpp: disable RNG synchronization with dev. Rcpp
	* tests/rosenbrock.R: add test

2018-03-03  Dirk Eddelbuettel  <edd@debian.org>

	* tests/compTest.R: Condition comparison on (optional) DEoptim
	package actually being available

2017-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Use .registration=TRUE
	* src/devol.cpp (putFunPtrInXPtr): Use Rcpp::export on test function
	* src/RcppExports.cpp: Updated
	* R/RcppExports.R: Idem

	* tests/compTest.R (runPair): Update test

	* src/Makevars (PKG_LIBS): Update, added OpenMP flags, use C++11

	* cleanup: Minor edits
